--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "localforage": "^1.7.3",
+    "pouchdb": "^7.1.1",
     "vue-i18n": "^7.3.3",
     "vuelidate": "^0.7.4",
     "vuex-persist": "^2.0.1"
