--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "localforage": "^1.7.3",
     "pouchdb": "^7.1.1",
     "vue-i18n": "^7.3.3",
+    "vue-signature-pad": "^1.1.11",
     "vuelidate": "^0.7.4",
     "vuex-persist": "^2.0.1"
   },
