--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pwa-news",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Tranfer",
+  "productName": "Tranferencia valor",
   "cordovaId": "org.cordova.quasar.app",
   "author": "",
   "private": true,
@@ -14,13 +14,13 @@
     "localforage": "^1.7.3",
     "md5": "^2.2.1",
     "pouchdb": "^7.1.1",
+    "quasar-cli": "^0.17.22",
     "vue-i18n": "^7.3.3",
     "vue-signature-pad": "^1.1.11",
     "vuelidate": "^0.7.4",
     "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
-    "quasar-cli": "^0.17.0",
     "strip-ansi": "=3.0.1"
   },
   "engines": {
